<resources>
    <string name="app_name">Mohammad Alrmamneh C.V</string>

    <string name="projects">Projects</string>
    <string name="experience">Experience</string>
    <string name="experienceFrom">Experience From</string>
    <string name="to">To</string>
    <string name="freelance">freelance</string>
    <string name="companies">Companies</string>
    <string name="years">Years</string>
    <string name="applications">Applications</string>
    <string name="technologiesAndSkills">Technologies &amp; Skills</string>
    <string name="contactInfo">Contact Info</string>
    <string name="dashboard">Dashboard</string>
    <string name="personalInfo">Personal Info</string>
    <string name="purpose">Purpose</string>
    <string name="education">Education</string>
    <string name="skills">Skills</string>
    <string name="exit">Exit</string>
    <string name="clickAgainToExit">Please click BACK again to exit</string>
    <string name="cv">C.V</string>
    <string name="validationInternetConnection">Please check internet connection!</string>
    <string name="serverError">Server Error!</string>
    <string name="refresh_here"><u>Refresh here</u></string>
    <string name="email">Email</string>
    <string name="emailTag">Email</string>
    <string name="mobile">Mobile</string>
    <string name="mobileTag">Mobile</string>
    <string name="dathOfBirth">Dath of birth</string>
    <string name="socialStatus">Social status</string>
    <string name="numberOfChildren">Number of children</string>
    <string name="location">Location</string>
    <string name="facebook">Facebook</string>
    <string name="linkedInTag">LinkedIn</string>
    <string name="goPlaystore">Go To Playstore</string>
    <string name="skillsExperience">Skills Experience</string>
    <string name="emailCopied">Email copied</string>


    <string name="loremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

</resources>