<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/_15sdp">

            <FrameLayout
                android:id="@+id/profilePic_Fl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_circle_profile_pic_border"
                    android:padding="@dimen/_1sdp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profilePic_CIV"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_gravity="center"
                        android:src="@color/gray" />

                </FrameLayout>

                <ImageView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_gravity="bottom|right"
                    android:background="@drawable/profile_pic_app_icon"
                    android:minWidth="0dp"
                    android:minHeight="0dp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="90">

                <LinearLayout
                    android:id="@+id/projects_LL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/projects_Tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text=""
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/applications"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/experience_LL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/experience_Tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:includeFontPadding="false"
                            android:singleLine="true"
                            android:text=""
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_14ssp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="top"
                            android:singleLine="true"
                            android:text="@string/years"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_7ssp" />

                    </LinearLayout>


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/experience"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/company_LL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="30"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/company_Tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text=""
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:singleLine="true"
                        android:text="@string/companies"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/name_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/jobTitle_Tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center|left"
            android:includeFontPadding="false"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp" />

        <com.astuetz.PagerSlidingTabStrip
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="@color/transparent"
            app:pstsIndicatorHeight="@dimen/_3sdp"
            app:pstsShouldExpand="true"
            app:pstsTabTextColor="@drawable/selector_tabs" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>


    </LinearLayout>

</LinearLayout>

