<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:padding="@dimen/_15sdp">


        <Button
            android:id="@+id/menu_Btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/menu_icon"
            android:minWidth="0dp"
            android:minHeight="0dp" />

        <Button
            android:id="@+id/export_PDF_Btn"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/pdf_icon"
            android:minWidth="0dp"
            android:minHeight="0dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_15sdp">

        <FrameLayout
            android:id="@+id/profilePic_Fl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_circle_profile_pic_border"
                android:padding="@dimen/_1sdp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic_CIV"
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center"
                    android:src="@color/white" />

            </FrameLayout>

            <ImageView
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/profile_pic_app_icon"
                android:minWidth="0dp"
                android:minHeight="0dp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="90">

            <LinearLayout
                android:id="@+id/projects_LL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="12"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/projects"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/experience_LL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/experience_Tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:singleLine="true"
                        android:text="6"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="top"
                        android:singleLine="true"
                        android:text="@string/years"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_9ssp" />

                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/experience"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/company_LL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/company_Tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="4"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/company"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/name_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:singleLine="true"
        android:text="Mohammad Alrmamneh"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/jobTitle_Tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center|left"
        android:paddingLeft="@dimen/_15sdp"
        android:paddingRight="@dimen/_15sdp"
        android:singleLine="true"
        android:text="Senior Android Developer"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12ssp" />

    <com.astuetz.PagerSlidingTabStrip
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/transparent"
        android:layout_marginTop="@dimen/_15sdp"
        app:pstsIndicatorHeight="@dimen/_3sdp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>



</LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/_200sdp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/main_app_color_2"
        android:orientation="vertical"
        android:weightSum="100">

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:background="@color/transparent"
            android:choiceMode="singleChoice"
            android:divider="@color/black"
            android:dividerHeight="1px" />

    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>